--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ antlr4-python3-runtime==4.9.3
 appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
 bbox-visualizer==0.1.0
+beautifulsoup4==4.12.3
 black==24.3.0
 Brotli @ file:///Users/cbousseau/work/recipes/ci_py311/brotli-split_1677936346777/work
 certifi==2023.7.22
@@ -24,6 +25,7 @@ executing @ file:///home/conda/feedstock_root/build_artifacts/executing_16985799
 filelock @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d3quwmvouf/croot/filelock_1700591194006/work
 fonttools==4.50.0
 fvcore==0.1.5.post20221221
+gdown==5.1.0
 gmpy2 @ file:///Users/cbousseau/work/recipes/ci_py311/gmpy2_1677937751357/work
 grpcio==1.62.1
 hydra-core==1.3.2
@@ -86,6 +88,7 @@ scikit-learn==1.4.1.post1
 scipy==1.12.0
 seaborn==0.13.2
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+soupsieve==2.5
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 sympy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_7cbpg8656h/croot/sympy_1701397648473/work
 tabulate==0.9.0
